# diff

./: .gitignore  .gitmodules  after_dynvalue.json5  before_dynvalue.json5  config.json5  input.c  loadedscript.py  mutate.py
reinforce/: CMakeLists.txt  build.sh  changes.patch  getHikari.sh
scripts/: find.py  start.py
tests/: input.c  input.json5  newobj
typeanalysis/: CMakeLists.txt  build.sh
typeanalysis/parsers/: CMakeLists.txt  analysis.cpp  analysis.h  headers.h  json.hpp  parser.cpp  type.cpp  type.h
